# gpsa-web

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  alembic.ini  docker-compose.yml  gpsa_about_overview_implementation_prompt.md  gpsa_history_legacy.md  gpsa_leadership_governance_fullstack_implementation_prompt.md  pyproject.toml  qa plan.md
gpsa/: pyproject.toml
gpsa/app/: main.py
gpsa/app/core/: config.py  dependencies.py  logging.py  permissions.py  security.py
gpsa/app/db/: base.py  mixins.py  session.py
gpsa/app/domain/: bus.py  events.py  handlers.py  kernel.py  value_objects.py
gpsa/app/middleware/: rate_limit.py
gpsa/app/models/: __init__.py  academic_resource.py  certificate.py  cms.py  contact.py  course.py  email_log.py  enums.py  event.py  feedback.py  gallery.py  governance.py  hero_slide.py  impact.py  leadership.py  legacy.py  news.py  notification.py  opportunity.py  partner.py  token.py  user.py  welfare.py
gpsa/app/repositories/: academic_resource.py  base.py  certificate.py  event.py  feedback.py  user.py
gpsa/app/schemas/: academic_resource.py  certificate.py  common.py  event.py  feedback.py  legacy.py  user.py
gpsa/app/services/: academic_resource.py  audit.py  auth.py  certificate.py  email.py  news.py  notification.py  opportunity.py  storage.py  welfare.py
gpsa/app/utils/: date_helpers.py  file_validation.py  pagination.py  slug.py
gpsa/app/workers/: scheduler.py  tasks.py
gpsa/migrations/: env.py
gpsa/migrations/versions/: 000ee02cd3df_add_past_leadership_recognition_tables.py  098b280c166d_initial_tables.py  388df832a17c_improve_db_design.py  5626195f3bd9_add_html_body_to_email_logs.py  6d8f1a2b3c4d_add_impact_cms.py  7b6c2f1a9d03_add_gallery_images.py  84b1c7d9e2f0_repair_missing_cms_pages.py  9c1f4d2b8a65_add_leadership_history.py  a31f6e8c4b20_add_governance_documents_faqs.py  a83d1e5f7b29_seed_cms_page_records.py  b42d7f9a5c31_normalize_governance_tags_json.py  b94e2f6a8c30_add_news_image_alt.py  c2a7e4f9b103_add_partners.py  c53e8a0b6d42_repair_legacy_administration_terms.py  ec3c66ef1a49_add_hero_slides.py  (+6 more)
gpsa/scripts/: create_admin.py  seed_db.py  seed_legacy.py
gpsa/tests/: conftest.py
(+139 files in other folders)
